--- a/paper/git4data/fig_merge_no_conflict.tex
+++ b/paper/git4data/fig_merge_no_conflict.tex
@@ -8,7 +8,7 @@
     tablefiveplot/.style={
       width=0.88\linewidth,
       height=0.45\linewidth,
-      symbolic x coords={C1,C2,C3,C4},
+      symbolic x coords={Merge1,Merge2,Merge3,Merge4},
       xtick=data,
       xminorticks=false,
       tick label style={font=\small},
@@ -21,8 +21,7 @@
       axis y line*=left,
       axis x line*=bottom,
       ymin=0,
-      ymax=75,
-      xlabel={Change Set},
+      ymax=80,
       ylabel={Built-in Merge Time (s)},
       ymajorgrids,
       grid style={gray!50,dashed},
@@ -41,7 +40,7 @@
         mark options={scale=0.65, fill=BuiltInPKColor!25},
         line width=1.3pt,
       ]
-        coordinates {(C1,0.26) (C2,1.69) (C3,7.98) (C4,22.81)};
+        coordinates {(Merge1,15.9) (Merge2,21.4) (Merge3,24.6) (Merge4,29.2)};
       \addlegendentry{BuiltIn Merge, PK}
       \addplot+[
         color=BuiltInNoPKColor,
@@ -50,7 +49,7 @@
         dashed,
         line width=1.3pt,
       ]
-        coordinates {(C1,0.56) (C2,11.37) (C3,28.29) (C4,66.59)};
+        coordinates {(Merge1,63.5) (Merge2,66.4) (Merge3,66.8) (Merge4,69.6)};
       \addlegendentry{BuiltIn Merge, NoPK}
       \addlegendimage{line legend, color=SQLPKColor, mark=triangle*, mark options={scale=0.65, fill=SQLPKColor!25}, dash pattern=on 5pt off 2pt}
       \addlegendentry{SQL Merge, PK}
@@ -61,9 +60,9 @@
       tablefiveplot,
       axis y line*=right,
       axis x line=none,
-      ymin=400,
-      ymax=510,
-      ytick distance=20,
+      ymin=0,
+      ymax=600,
+      ytick distance=100,
       ylabel={SQL Merge Time (s)},
     ]
       \addplot+[
@@ -73,7 +72,7 @@
         dash pattern=on 5pt off 2pt,
         line width=1.2pt,
       ]
-        coordinates {(C1,421.87) (C2,442.96) (C3,465.11) (C4,488.36)};
+        coordinates {(Merge1,488) (Merge2,488) (Merge3,489) (Merge4,488)};
       \addplot+[
         color=SQLNoPKColor,
         mark=*,
@@ -81,9 +80,9 @@
         densely dotted,
         line width=1.2pt,
       ]
-        coordinates {(C1,421.87) (C2,437.06) (C3,431.99) (C4,432.84)};
+        coordinates {(Merge1,433) (Merge2,431) (Merge3,423) (Merge4,441)};
     \end{axis}
   \end{tikzpicture}
-  \caption{Line chart summarizing Table~\ref{tab:expmerge4} results.}
-  \label{fig:table5-line}
+  \caption{Merges (1M updated rows without conflicts).}
+  \label{fig:1M_merge_no_conflict}
 \end{figure}
