--- a/paper/git4data/fig_merge_has_conflict.tex
+++ b/paper/git4data/fig_merge_has_conflict.tex
@@ -8,7 +8,7 @@
     tablefiveplot/.style={
       width=0.88\linewidth,
       height=0.45\linewidth,
-      symbolic x coords={C1,C2,C3,C4},
+      symbolic x coords={Merge1,Merge2,Merge3,Merge4},
       xtick=data,
       xminorticks=false,
       tick label style={font=\small},
@@ -21,8 +21,7 @@
       axis y line*=left,
       axis x line*=bottom,
       ymin=0,
-      ymax=75,
-      xlabel={Change Set},
+      ymax=80,
       ylabel={Built-in Merge Time (s)},
       ymajorgrids,
       grid style={gray!50,dashed},
@@ -41,7 +40,7 @@
         mark options={scale=0.65, fill=BuiltInPKColor!25},
         line width=1.3pt,
       ]
-        coordinates {(C1,0.25) (C2,1.27) (C3,8.36) (C4,23.41)};
+        coordinates {(Merge1,15) (Merge2,21) (Merge3,25) (Merge4,30)};
       \addlegendentry{BuiltIn Merge, PK}
       \addplot+[
         color=BuiltInNoPKColor,
@@ -50,7 +49,7 @@
         dashed,
         line width=1.3pt,
       ]
-        coordinates {(C1,0.58) (C2,8.05) (C3,11.04) (C4,66.74)};
+        coordinates {(Merge1,66) (Merge2,76) (Merge3,61) (Merge4,62)};
       \addlegendentry{BuiltIn Merge, NoPK}
       \addlegendimage{line legend, color=SQLPKColor, mark=triangle*, mark options={scale=0.65, fill=SQLPKColor!25}, dash pattern=on 5pt off 2pt}
       \addlegendentry{SQL Merge, PK}
@@ -61,9 +60,9 @@
       tablefiveplot,
       axis y line*=right,
       axis x line=none,
-      ymin=400,
-      ymax=560,
-      ytick distance=20,
+      ymin=0,
+      ymax=600,
+      ytick distance=100,
       ylabel={SQL Merge Time (s)},
     ]
       \addplot+[
@@ -73,7 +72,7 @@
         dash pattern=on 5pt off 2pt,
         line width=1.2pt,
       ]
-        coordinates {(C1,473.96) (C2,497.65) (C3,522.54) (C4,548.66)};
+        coordinates {(Merge1,549) (Merge2,549) (Merge3,549) (Merge4,548.66)};
       \addplot+[
         color=SQLNoPKColor,
         mark=*,
@@ -81,9 +80,9 @@
         densely dotted,
         line width=1.2pt,
       ]
-        coordinates {(C1,448.30) (C2,451.87) (C3,459.00) (C4,457.21)};
+        coordinates {(Merge1,449) (Merge2,469) (Merge3,452) (Merge4,462)};
     \end{axis}
   \end{tikzpicture}
-  \caption{Line chart summarizing Table~\ref{tab:expmerge42} results.}
-  \label{fig:table7-line}
+  \caption{Merges (1M updated rows with conflicts).}
+  \label{fig:1M_merge_has_conflict}
 \end{figure}
